"add example with give context to the model"

--- a/parte 2/3 Import and prepare data.ipynb
+++ b/parte 2/3 Import and prepare data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac8e8808",
+   "id": "d7fb7027",
    "metadata": {},
    "source": [
     "### Read files text"
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4e48b302",
+   "id": "97115bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d60c27f0",
+   "id": "5bbb67c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,6 +468,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "id": "8349faaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desculpe, mas não posso fazer um resumo de uma final da Copa do Mundo de 2022, pois essa competição ainda não ocorreu. Atualmente estamos em 2021 e a Copa do Mundo de 2022 será realizada em novembro e dezembro desse ano, no Catar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat_prompt = Prompt(model = chat_model)\n",
+    "chat_prompt.add_message('O assistente responde as perguntas educadamente', role= 'system')\n",
+    "chat_prompt.add_message(\"Faça um resumo da final entre Argentina e França na copa do mundo de 2022\", role= 'user')\n",
+    "gptchat = Chat(prompt = chat_prompt, temperature = 1)\n",
+    "gptchat.send_message()\n",
+    "chat_prompt.print_last_message()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "1b21d0b0",
    "metadata": {},
@@ -488,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "07fc3337",
+   "id": "9ee8e042",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fc719c99",
+   "id": "559409e3",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "24e3f7c3",
+   "id": "6b9f4763",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2f7a367a",
+   "id": "9a54a9b2",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dfd3c74a",
+   "id": "ba7b4d77",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "451818de",
+   "id": "1fed32e0",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c1afdfbf",
+   "id": "3c3a8ef9",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e21d783",
+   "id": "44dca9a7",
    "metadata": {},
    "outputs": [],
    "source": []
